<?xml version="1.0" encoding="utf-8"?>
<!--
     android:textAppearance="?android:attr/textAppearanceSmall" for TextViews
     style="@style/Base.TextAppearance.AppCompat.Headline" for EditTexts
     style="@style/Widget.AppCompat.Button.Borderless" for Buttons
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--bill-->
    <TextView
        android:id="@+id/lblBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblBill"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtBill"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:text="@string/defaultBill"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblBill">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/euroSymbolBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/euroSymbol"
        android:textSize="@dimen/sybomSize"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtBill"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <!--percentage-->
    <TextView
        android:id="@+id/lblPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percentage"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintBottom_toTopOf="@id/txtPercentage"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintRight_toLeftOf="@id/lblTip"
        app:layout_constraintTop_toBottomOf="@id/txtBill" />

    <EditText
        android:id="@+id/txtPercentage"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:text="@string/defaultPercentage"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toStartOf="@+id/percetageSymbol"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblPercentage" />


    <TextView
        android:id="@+id/percetageSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percentageSymbol"
        android:textSize="@dimen/sybomSize"
        android:layout_margin="@dimen/main_inter_margin"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtPercentage"
        app:layout_constraintEnd_toStartOf="@+id/guideline2" />

    <!--tip-->
    <TextView
        android:id="@+id/lblTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtBill" />

    <EditText
        android:id="@+id/txtTip"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:textAlignment="textEnd"
        android:inputType="none"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/txtPercentage"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/lblTip" />

    <TextView
        android:id="@+id/euroSymbolTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/euroSymbol"
        android:textSize="@dimen/sybomSize"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtTip"
        app:layout_constraintStart_toStartOf="@+id/guideline" />


    <!--total-->
    <TextView
        android:id="@+id/lblTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@id/txtTip" />

    <EditText
        android:id="@+id/txtTotal"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:textAlignment="textEnd"
        android:inputType="none"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblTotal" />

    <TextView
        android:id="@+id/euroSymbolTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/euroSymbol"
        android:textSize="@dimen/sybomSize"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtTotal"
        app:layout_constraintStart_toEndOf="@+id/txtTotal" />

    <!--resetTip-->
    <Button
        android:id="@+id/btnResetTip"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:textColor="@color/colorAccent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTotal" />

    <!--Diners Section-->
    <!--diners-->
    <TextView
        android:id="@+id/lblDiners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblDiners"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblPerDiner"
        app:layout_constraintEnd_toStartOf="@+id/guideline2" />

    <EditText
        android:id="@+id/txtDiners"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:nextFocusDown="@id/txtBill"
        android:selectAllOnFocus="true"
        android:text="@string/defaultDiners"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblDiners" />

    <!--perDiner-->
    <TextView
        android:id="@+id/lblPerDiner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblPerDiner"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintLeft_toRightOf="@id/lblDiners"
        app:layout_constraintTop_toBottomOf="@id/btnResetTip" />

    <EditText
        android:id="@+id/txtPerDiner"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:inputType="none"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/lblPerDiner" />

    <TextView
        android:id="@+id/euroSymbolPerDiner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/euroSymbol"
        android:textSize="@dimen/sybomSize"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtPerDiner"
        app:layout_constraintStart_toEndOf="@+id/txtPerDiner" />

    <!--perDinerRounded-->
    <TextView
        android:id="@+id/lblPerDinerRounded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblPerDinerRounded"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@id/txtPerDiner" />

    <EditText
        android:id="@+id/txtPerDinerRounded"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:inputType="none"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toStartOf="@+id/euroSymbolPerDinerRounded"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblPerDinerRounded" />

    <TextView
        android:id="@+id/euroSymbolPerDinerRounded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/euroSymbol"
        android:textSize="@dimen/sybomSize"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtPerDinerRounded"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <!--resetDiners-->
    <Button
        android:id="@+id/btnResetDiners"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:textColor="@color/colorAccent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtPerDinerRounded" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="125dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="395dp" />

</androidx.constraintlayout.widget.ConstraintLayout>


